--- a/style.css
+++ b/style.css
@@ -130,14 +130,52 @@ header div button:nth-child(3) {
   z-index: 1000;
 }
 .modal {
-  width: 45%;
+  display: flex;
+  flex-direction: column;
+  width: 75%;
   height: 65%;
   background-color: white;
   border-radius: 10px;
 }
 .modal img {
   cursor: pointer;
+  width: 40px;
 }
 .active {
   display: grid;
+}
+
+.modal-list {
+  display: flex;
+  flex-direction: column;
+  flex-grow: 1;
+  padding: 30px;
+  gap: 10px;
+}
+.list-item {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  height: 55px;
+  padding: 10px;
+  border-radius: 10px;
+  font-size: 12px;
+  box-shadow: rgba(6, 24, 44, 0.4) 0px 0px 0px 2px,
+    rgba(6, 24, 44, 0.65) 0px 4px 6px -1px,
+    rgba(255, 255, 255, 0.08) 0px 1px 0px inset;
+}
+.list-item img {
+  height: 40px;
+  width: 40px;
+}
+.list-item .price {
+  color: red;
+}
+.total {
+  text-align: center;
+  font-size: 20px;
+}
+.total span {
+  color: green;
+  font-weight: 700;
 }
